documented CSharpFragmentLocator changed the name of the executable in the makefile to locator.exe

--- a/technologies/CSharpFragmentLocator/Makefile
+++ b/technologies/CSharpFragmentLocator/Makefile
@@ -1,10 +1,10 @@
 generate:
-	dmcs -target:exe -out:bin/Locator.exe -lib:./bin -reference:Mono.Cecil.dll -reference:ICSharpCode.NRefactory.dll -reference:ICSharpCode.NRefactory.CSharp.dll -reference:ICSharpCode.NRefactory.Tests.dll -reference:ICSharpCode.NRefactory.Xml.dll ./locator/Main.cs ./locator/JSON.cs ./locator/LocatorCSharpParser.cs
+	dmcs -target:exe -out:bin/locator.exe -lib:./bin -reference:Mono.Cecil.dll -reference:ICSharpCode.NRefactory.dll -reference:ICSharpCode.NRefactory.CSharp.dll -reference:ICSharpCode.NRefactory.Tests.dll -reference:ICSharpCode.NRefactory.Xml.dll ./locator/Main.cs ./locator/JSON.cs ./locator/LocatorCSharpParser.cs
 
 test:
 	mono bin/Locator.exe Company.cs fragment.json lines.json
 	diff -w baseline.json lines.json	
 
 clean:
-	rm bin/Locator.exe
+	rm bin/locator.exe
 	rm lines.json
