--- a/technologies/HsImportMatcher/Makefile
+++ b/technologies/HsImportMatcher/Makefile
@@ -1,13 +1,13 @@
 build: Matcher
 
 Matcher: *.hs Makefile
-	ghc Matcher.hs
+	@ghc Matcher.hs
 
 test: Matcher
-	make HXT.test
+	@make HXT.test
 
 HXT.test:
-	./matcher.py \
+	@./matcher.py \
 		../../contributions/hxt/Total.hs \
 		"Text.XML.HXT"
 
@@ -15,4 +15,3 @@ clean:
 	rm -f *.hi
 	rm -f *.o
 	rm -f Matcher
-#	rm -f tests/*.lines
