Added extractor to language/CSharp and modified Makefile

--- a/technologies/CSharpFactExtractor/Makefile
+++ b/technologies/CSharpFactExtractor/Makefile
@@ -1,5 +1,12 @@
 build:
-	dmcs -target:exe -out:bin/extractor.exe -lib:./lib -reference:Mono.Cecil.dll -reference:ICSharpCode.NRefactory.dll -reference:ICSharpCode.NRefactory.CSharp.dll -reference:ICSharpCode.NRefactory.Tests.dll -reference:ICSharpCode.NRefactory.Xml.dll extractor/Main.cs extractor/Fact.cs
+	make csharpfactextractor/CSharpFactExtractor.exe
+
+csharpfactextractor/CSharpFactExtractor.exe: extractor/*.cs Makefile
+	dmcs \
+			-target:exe -out:bin/extractor.exe \
+			-lib:./lib -reference:Mono.Cecil.dll -reference:ICSharpCode.NRefactory.dll -reference:ICSharpCode.NRefactory.CSharp.dll \
+			-reference:ICSharpCode.NRefactory.Tests.dll -reference:ICSharpCode.NRefactory.Xml.dll \
+			extractor/*.cs
 	cp lib/*.dll bin
 	cp lib/*.so bin
 
@@ -10,4 +17,4 @@ clean:
 	rm -r bin/*.exe
 	rm -r bin/*.dll
 	rm -r bin/*.so
-	rm Company.cs.facts.json
+	rm -f Company.cs.facts.json
