made W3CValidator testable some minor changes on the actual validator

--- a/technologies/W3CValidator/Makefile
+++ b/technologies/W3CValidator/Makefile
@@ -1,5 +1,10 @@
+test:	test-positive test-negative test-css
+
 test-positive:
-	./validator.py style.css
+	./validator.py html5_example.html
 
 test-negative:
-	./validator.py index.html
+	./validator.py department.html -negative
+
+test-css:
+	./validator.py style.css
