--- a/contributions/linq2Sql/linq2Sql.csproj
+++ b/contributions/linq2Sql/linq2Sql.csproj
@@ -43,6 +43,7 @@
       <LastGenOutput>CompanyDataClasses.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -50,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="nunit.framework">
-      <HintPath>..\..\technologies\NUnit\2.5.9\nunit.framework.dll</HintPath>
+      <HintPath>packages\NUnit.2.6.1\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
