--- a/contributions/linq2Sql/app.config
+++ b/contributions/linq2Sql/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="linq2Sql.Properties.Settings._101companiesConnectionString"
-            connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=101companies;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True"
+            connectionString="Data Source=SL-WINDOWS;Initial Catalog=101companies;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
