--- a/contributions/hadoop/.classpath
+++ b/contributions/hadoop/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry excluding="lib/" kind="src" path=""/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/avro-1.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.4.jar"/>
@@ -11,13 +11,13 @@
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-api-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-net-1.4.1.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-core-asl-1.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-mapper-asl-1.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-common-0.21.0.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-hdfs-0.21.0.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-mapred-0.21.0.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-mapred-examples-0.21.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/jackson-core-asl-1.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-mapper-asl-1.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
