--- a/contributions/hadoop/.settings/org.eclipse.jdt.core.prefs
+++ b/contributions/hadoop/.settings/org.eclipse.jdt.core.prefs
@@ -1,3 +1,4 @@
+#Thu Apr 07 15:25:19 CEST 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
