Removed "Replace with" command in gra2mol ant file since it caused the build process to fail, the first time it was executed

--- a/contributions/gra2mol/build.xml
+++ b/contributions/gra2mol/build.xml
@@ -117,7 +117,8 @@
 		</java>    
 		
 		<!-- Bug fixed in created parser  -->
-		<replace file="${output.antlr}/${grammarName}Parser.java" token=".getTemplate()" value=""/>
+		<!-- With this line commented in, the build process will fail the first time it is executed  -->
+		<!--<replace file="${output.antlr}/${grammarName}Parser.java" token=".getTemplate()" value=""/>-->
 		
 		<!-- The created parser is compiled -->
 		<mkdir dir="${javaDestDir}"/>
