--- a/contributions/gra2mol/build.xml
+++ b/contributions/gra2mol/build.xml
@@ -118,7 +118,7 @@
 		
 		<!-- Bug fixed in created parser  -->
 		<!-- With this line commented in, the build process will fail the first time it is executed  -->
-		<!--<replace file="${output.antlr}/${grammarName}Parser.java" token=".getTemplate()" value=""/>-->
+		<replace file="${output.antlr}/${grammarName}Parser.java" token=".getTemplate()" value=""/>
 		
 		<!-- The created parser is compiled -->
 		<mkdir dir="${javaDestDir}"/>
