Minor fix on python impl

--- a/contributions/pyjson/Makefile
+++ b/contributions/pyjson/Makefile
@@ -1,15 +1,13 @@
-all:
-
 test:
-	@rm -f log
-	@touch log
-	@echo Total before cut: >> log 
-	@./total.py input.json >> log
-	@./cut.py input.json output.json >> log
-	@echo Total after cut: >> log 
-	@./total.py output.json >> log
-	@diff baseline log
-	@make clean
+	rm -f log
+	touch log
+	echo Total before cut: >> log 
+	./total.py sampleCompany.json >> log
+	./cut.py sampleCompany.json output.json >> log
+	echo Total after cut: >> log 
+	./total.py output.json >> log
+	diff baseline log
+	make clean
 
 clean:
-	@rm -f output.json log
+	rm -f output.json log
