Unbroke "make test" for HsImportMatcher

--- a/technologies/HsImportMatcher/Makefile
+++ b/technologies/HsImportMatcher/Makefile
@@ -8,8 +8,12 @@ test: Matcher
 
 HXT.test:
 	@./matcher.py \
-		../../contributions/hxt/Total.hs \
+		tests/hxt/Total.hs \
 		"Text.XML.HXT"
+
+# Copy to fetch a new version for test data
+copy:
+	cp ../../../101haskell/contributions/hxt/Total.hs tests/hxt
 
 clean:
 	rm -f *.hi
