Improved fragment locator to include comments. Also, the old JSON-based input format has been phased out. Further, stdin and stdout are used more aggressively.

--- a/technologies/HsFragmentLocator/Makefile
+++ b/technologies/HsFragmentLocator/Makefile
@@ -3,6 +3,14 @@ build:
 
 test: build
 	make type/MyType.test
+	make data/MyData.test
+	make newtype/MyNewtype.test
+	make function/f.test
+	make function/g.test
+	make function/h.test
+	make pattern/x.test
+	make function/f1.test
+	make function/f2.test
 
 %.test:
 	./HsFragmentLocator $* < tests/Test.hs > log
