Another push for today's lecture

--- a/technologies/Haddock/Makefile
+++ b/technologies/Haddock/Makefile
@@ -1,10 +1,16 @@
 all:
 	make clean
+	make build
+	make doc
+	make clean
+
+build:
 	cabal check
 	cabal configure
 	cabal build
-	dist/build/helloWorld/helloWorld
-	make clean
+
+doc:
+	cabal haddock
 
 clean:
 	cabal clean
