Working on Haskell and Java at the same time.

--- a/contributions/javaRmi/Makefile
+++ b/contributions/javaRmi/Makefile
@@ -1,7 +1,7 @@
 none:
 
 start-server:
-	java -Djava.security.policy=org/softlang/server/security.policy org.softlang.server.Server
+	java -Djava.security.policy=org/softlang/company/server/security.policy org.softlang.company.server.Server
 
 start-local-client:
-	java org.softlang.client.Client
+	java org.softlang.company.client.Demo
