updated CSharp Fact extractor and Fragment locator

--- a/technologies/CSharpFactExtractor/Makefile
+++ b/technologies/CSharpFactExtractor/Makefile
@@ -12,7 +12,8 @@ csharpfactextractor/CSharpFactExtractor.exe: extractor/*.cs Makefile
 	cp lib/*.so bin
 
 test:
-	./extractor.py Company.cs Company.cs.facts.json
+	./extractor.py < Company.cs > Company.cs.facts.json
+	diff --ignore-all-space simple.baseline Company.cs.facts.json
 
 clean:
 	rm -rf bin/*.exe
