Work on SQLFactExtractor

--- a/technologies/SqlFactExtractor/Makefile
+++ b/technologies/SqlFactExtractor/Makefile
@@ -1,7 +1,10 @@
 test:
-	python test.py example/createTable.sql
+	./extractor.py < example/createTable.sql > example/testResult.json
+	./testResultWithLineNumbers.py < example/createTable.sql > example/testResultWithLineNumbers.json
+
 	diff --ignore-all-space example/testResult.json example/estimatedResult.json
 	diff --ignore-all-space example/testResultWithLineNumbers.json example/estimatedResultWithLineNumbers.json
 
 	rm example/testResult.json
 	rm example/testResultWithLineNumbers.json
+
