--- a/concepts/Functional_data_structure/Set/Set.cabal
+++ b/concepts/Functional_data_structure/Set/Set.cabal
@@ -11,13 +11,26 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     BinarySearchTree,
-                       Main,
-                       Set,
+  exposed-modules:     Set,
+                       BinarySearchTree,
                        ListSet
   build-depends:       base >=4.6 && <4.7,
+                       deepseq >=1.3 && <1.4
+  default-language:    Haskell2010
+
+Test-Suite Tests
+  type:                exitcode-stdio-1.0
+  main-is:             Tests.hs
+  build-depends:       base >=4.6 && <4.7,
                        deepseq >=1.3 && <1.4,
-                       HUnit >=1.2 && <1.3,
+                       HUnit >=1.2 && <1.3
+  default-language:    Haskell2010
+
+Benchmark Benchmarks
+  type:                exitcode-stdio-1.0
+  main-is:             Benchmarks.hs
+  build-depends:       base >=4.6 && <4.7,
                        criterion >=0.8 && <0.9,
+                       deepseq >=1.3 && <1.4,
                        random >=1.0 && <1.1
   default-language:    Haskell2010
