--- a/concepts/Functional_data_structure/Set/Set.cabal
+++ b/concepts/Functional_data_structure/Set/Set.cabal
@@ -12,8 +12,8 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Set,
-                       BinarySearchTree,
-                       ListSet
+                       NaiveSet,
+                       BinarySearchTree
   build-depends:       base >=4.6 && <4.7,
                        deepseq >=1.3 && <1.4
   default-language:    Haskell2010
