Bug in SqlFactExtractor and Bug in both Hibernate Contributions (missing semicolon)

--- a/technologies/SqlFactExtractor/Makefile
+++ b/technologies/SqlFactExtractor/Makefile
@@ -5,11 +5,14 @@ test:
 	./extractor.py < test/Column.sql > test/output/Column.json
 	./extractor.py < test/CreateStatement.sql > test/output/CreateStatement.json
 	./extractor.py < test/IndexedAlterStatement.sql > test/output/IndexedAlterStatement.json
+	./extractor.py < test/BugIndexingMixCreateStatements.sql > test/output/BugIndexingMixCreateStatements.json
+	
 		
 	diff --ignore-all-space test/baseline/AlterStatement.json test/output/AlterStatement.json
 	diff --ignore-all-space test/baseline/Column.json test/output/Column.json
 	diff --ignore-all-space test/baseline/CreateStatement.json test/output/CreateStatement.json
 	diff --ignore-all-space test/baseline/IndexedAlterStatement.json test/output/IndexedAlterStatement.json
+	diff --ignore-all-space test/baseline/BugIndexingMixCreateStatements.json test/output/BugIndexingMixCreateStatements.json
 
 	make reset-test
 	
