--- a/concepts/Functional_data_structure/Set/Set.cabal
+++ b/concepts/Functional_data_structure/Set/Set.cabal
@@ -1,5 +1,5 @@
 name:                Set
-version:             0.1.0.0
+version:             0.1.0.1
 synopsis:            Demonstration of sets as lists and as trees
 homepage:            http://101companies.org/wiki/Functional_data_structure
 license:             BSD3
@@ -14,23 +14,23 @@ library
   exposed-modules:     Set,
                        NaiveSet,
                        BinarySearchTree
-  build-depends:       base >=4.6 && <4.7,
-                       deepseq >=1.3 && <1.4
+  build-depends:       base >=4.6 && <=4.10,
+                       deepseq >=1.3 && <1.5
   default-language:    Haskell2010
 
 Test-Suite Tests
   type:                exitcode-stdio-1.0
   main-is:             Tests.hs
-  build-depends:       base >=4.6 && <4.7,
-                       deepseq >=1.3 && <1.4,
-                       HUnit >=1.2 && <1.3
+  build-depends:       base >=4.6 && <=4.10,
+                       deepseq >=1.3 && <1.5,
+                       HUnit >=1.2 && <1.5
   default-language:    Haskell2010
 
 Benchmark Benchmarks
   type:                exitcode-stdio-1.0
   main-is:             Benchmarks.hs
-  build-depends:       base >=4.6 && <4.7,
-                       criterion >=0.8 && <0.9,
-                       deepseq >=1.3 && <1.4,
-                       random >=1.0 && <1.1
+  build-depends:       base >=4.6 && <=4.10,
+                       criterion >=0.8 && <1.2,
+                       deepseq >=1.3 && <1.5,
+                       random >=1.0 && <1.2
   default-language:    Haskell2010
